<resources>
    <string name="app_name">Minhaeiro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="act_atualizar">Atualizar</string>

    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">
        "Contacts permissions are needed for providing email completions."
    </string>
    <string name="txtLoginHint">Login</string>
    <string name="txtSenhaHint">Senha</string>
    <string name="txtNovaSenhaHint">Nova Senha</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnAbrirCadastro">Não tem conta? Clique aqui!</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="txtNomeHint">Nome</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnAtualizar">Atualizar</string>
    <string name="txtConfirmaSenhaHint">Confirmação de Senha</string>

    <string name="nome_vazio_erro">O Nome é obrigatório</string>
    <string name="login_vazio_erro">O Login é obrigatório</string>
    <string name="senha_vazio_erro">A Senha é obrigatória</string>
    <string name="nova_senha_vazio_erro">A Nova Senha é obrigatória</string>
    <string name="confirma_senha_vazio_erro">A Confirmação de Senha é obrigatória</string>
    <string name="confirma_senha_invalida_erro">A Confirmação de Senha está diferente da Nova Senha</string>
    <string name="descricao_vazio_erro">A Descrição é obrigatória</string>
    <string name="valor_vazio_erro">O Valor é obrigatório</string>
    <string name="data_vazio_erro">A Data é obrigatória</string>
    <string name="valor_maior_zero_erro">O Valor tem que ser maior que zero</string>
    <string name="btnPerfil">Atualizar Perfil</string>
    <string name="title_activity_movimentacao_cadastro">Cadastrar Movimentação</string>
    <string name="txtDescricaoHint">Descrição</string>
    <string name="txtMovimentacaoDataHint">Data</string>
    <string name="txtValorHint">Valor</string>
    <string name="lblCategoria">Categoria</string>
    <string name="lblPessoa">Pessoa</string>
    <string name="lblCredito">Crédito</string>
    <string name="lblDebito">Débito</string>

    <string name="spnCategoriaPrompt">Categoria</string>
    <string name="spnPessoaPrompt">Pessoa</string>
    <string name="lblTipo">Tipo</string>

    <string-array name="tipo_movimentacao_texto">
        <item>Débito</item>
        <item>Crédito</item>
    </string-array>
    <string-array name="tipo_movimentacao_valor">
        <item>D</item>
        <item>C</item>
    </string-array>
    <string name="title_activity_movimentacao_detalhe">MovimentacaoDetalheActivity</string>
    <string name="title_activity_pessoas">Pessoas</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_pessoas_movimentacoes">Movimentações</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
