<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblPessoa"
        android:textColor="@color/accent" />
    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">-->

    <Spinner
        android:id="@+id/spnPessoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spinner_margin_vertical"
        android:layout_marginTop="@dimen/spinner_margin_vertical"
        android:prompt="@string/spnPessoaPrompt" />

    <!--<ImageButton
        android:id="@+id/btnPessoaAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:onClick="abrirPessoaDialog"
        android:src="@drawable/ic_button_pessoa_adicionar" />-->
    <!--
        </LinearLayout>-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtDescricaoHint"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtMovimentacaoValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtValorHint"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/lblTipo"
                android:textColor="@color/accent" />

            <Spinner
                android:id="@+id/spnMovimentacaoTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipo_movimentacao_texto" />


        </LinearLayout>

        <Switch
            android:id="@+id/swtRealizada"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:hint="Realizada"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>